<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BMI">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/bmiback"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="0dp"
        android:padding="20dp"
        android:src="@drawable/backbutton" />

        <ImageView
            android:id="@+id/bmihistory"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="5dp"
            android:padding="20dp"
            android:src="@drawable/baseline_history_24" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/centerhorizontalline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="-5dp">

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/centerverticalline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/male"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/heightlayout"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:layout_toStartOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung">

        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@id/textmale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/male">

        </ImageView>

        <TextView
            android:id="@+id/textmale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/male"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/female"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/heightlayout"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:layout_toEndOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung">

        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@id/textfemale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/female">

        </ImageView>

        <TextView
            android:id="@+id/textfemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/femaletext"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/heightlayout"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerhorizontalline"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/cardbackgroung">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/raleway"
            android:text="@string/height"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:id="@+id/currentheight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:text="@string/startingheight"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/currentheight"
            android:fontFamily="@font/raleway"
            android:text="@string/unit"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <SeekBar
            android:id="@+id/seekbarforheight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:progressTint="#FF4C4C"
            android:thumbTint="@color/white">

        </SeekBar>

    </RelativeLayout>


    <Button
        android:id="@+id/calculatebmi"
        android:layout_width="358dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="71dp"
        android:background="@drawable/buttonbackground"
        android:fontFamily="@font/raleway"
        android:text="@string/calculate_your_bmi"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <RelativeLayout
        android:id="@+id/weight"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/heightlayout"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:layout_toStartOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung">


        <TextView
            android:id="@+id/textweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:id="@+id/currentweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/raleway"
            android:text="@string/startingweight"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/decrementweight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/minus">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/incremetweight"
                android:layout_width="30dp"
                android:layout_height="30dp"

                android:contentDescription="@string/todo"
                android:src="@drawable/add">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/Age"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/heightlayout"
        android:layout_marginTop="85dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:layout_toEndOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung">


        <TextView

            android:id="@+id/textage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/age"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/currentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:fontFamily="@font/raleway"
            android:text="@string/startingage"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/decrementage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/todo"

                android:src="@drawable/minus">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/incrementage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/add">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>